plogapp/tests/errors/AttAndRecordConflict1.plog
sorts
#s = {f(x)}.
attributes
f: #s->#s.
statements

